--- a/IT/DevOps/technicalChallenges/challenge3-jenkins/Jenkinsfile
+++ b/IT/DevOps/technicalChallenges/challenge3-jenkins/Jenkinsfile
@@ -17,11 +17,10 @@ pipeline {
     stage('Deploy to Environment') {
       environment {
         SERVICE_PORT = '8080'
-        ENVIRONMENT_VARIABLE = 'dev JAVA_OPTS=-Djenkins.install.runSetupWizard=false JENKINS_USER=ICC JENKINS_PASS=totallyNotSecurePasswordForLocalTesting!1337'
+        ENVIRONMENT_VARIABLE = '-e SERVICE_PORT=8080 -e JAVA_OPTS=-Djenkins.install.runSetupWizard=false -e JENKINS_USER=ICC -e JENKINS_PASS=totallyNotSecurePasswordForLocalTesting!1337'
       }
       steps {
-        sh "kubectl set env deployment/challenge2 -e ${ENVIRONMENT_VARIABLE}"
-        sh "kubectl expose deployment/challenge2 --port=${SERVICE_PORT} --target-port=${SERVICE_PORT} --type=LoadBalancer"
+        sh "kubectl set env deployment/challenge2 ${ENVIRONMENT_VARIABLE}"
       }
     }
   }
